packages/hyperchad/template/tests/warnings/elements-in-attributes.stderr
error: expected one of: curly braces, literal, parentheses, `@`, `;`, integer literal, floating point literal, `#`, identifier
 --> tests/warnings/elements-in-attributes.rs:9:21
  |
9 |         anchor href=.pinkie-pie {} {}
  |                     ^

error: unexpected end of input, expected one of: identifier, literal, `.`, `#`, curly braces, `;`
  --> tests/warnings/elements-in-attributes.rs:20:5
   |
20 | /     container! {
21 | |         @if true {
22 | |         } @else if true {
23 | |         } @else {
...  |
26 | |     };
   | |_____^
   |
   = note: this error originates in the macro `container` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, expected one of: identifier, literal, `.`, `#`, curly braces, `;`
  --> tests/warnings/elements-in-attributes.rs:28:5
   |
28 | /     container! {
29 | |         @for _ in 0..10 {
30 | |             anchor href={ div #for {} } {}
31 | |         }
32 | |     };
   | |_____^
   |
   = note: this error originates in the macro `container` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, expected one of: identifier, literal, `.`, `#`, curly braces, `;`
  --> tests/warnings/elements-in-attributes.rs:34:5
   |
34 | /     container! {
35 | |         @while false {
36 | |             anchor href={ div #while {} } {}
37 | |         }
38 | |     };
   | |_____^
   |
   = note: this error originates in the macro `container` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, expected one of: identifier, literal, `.`, `#`, curly braces, `;`
  --> tests/warnings/elements-in-attributes.rs:40:5
   |
40 | /     container! {
41 | |         @match () {
42 | |             () => anchor href={ div #match {} } {}
43 | |         }
44 | |     };
   | |_____^
   |
   = note: this error originates in the macro `container` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0422]: cannot find struct, variant or union type `div` in this scope
 --> tests/warnings/elements-in-attributes.rs:5:23
  |
5 |         anchor href={ div {} } {}
  |                       ^^^ not found in this scope

error[E0422]: cannot find struct, variant or union type `div` in this scope
  --> tests/warnings/elements-in-attributes.rs:17:19
   |
17 |         anchor #{ div {} } {}
   |                   ^^^ not found in this scope
